# StockTradingBot

StockTradingBot/: BankingSystem.cpp  BankingSystem.h  CMakeLists.txt  GUI.cpp  GUI.h  README.md  StockMarket.cpp  StockMarket.h  TradingBot.cpp  TradingBot.h  main.cpp
